adding login page

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Kharazmic</string>
+    <string name="enter_phone_number">لطفا شماره تلفن خود را وارد کنید</string>
 </resources>
