--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Kharazmic</string>
     <string name="enter_phone_number">لطفا شماره تلفن خود را وارد کنید</string>
+    <string name="edit_phone_number">ویرایش شماره ی تلفن</string>
+    <string name="send_code">بررسی کد تایید</string>
+    <string name="resend_code">ارسال مجدد کد فعال سازی</string>
 </resources>
