--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">Kharazmic</string>
-    <string name="enter_phone_number">لطفا شماره تلفن خود را وارد کنید</string>
+    <string name="enter_phone_number">شماره تلفن همراه</string>
     <string name="edit_phone_number">ویرایش شماره ی تلفن</string>
     <string name="send_code">بررسی کد تایید</string>
     <string name="resend_code">ارسال مجدد کد فعال سازی</string>
+    <string name="receive_code">دریافت کد تایید</string>
+    <string name="rules">قوانین و مقررات</string>
+    <string name="wrong_code">کد وارد شده اشتباه می باشد.</string>
+    <string name="rules_txt">را خوانده ام و موافق هستم.</string>
 </resources>
