--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -14,4 +14,16 @@
     <string name="search">سرچ نماد</string>
     <string name="news">اخبار</string>
     <string name="profile">پروفایل</string>
+    
+    
+    <string name="hagh_taghadom">حق تقدم</string>
+    <string name="oragh_bedehi">اوراق بدهی</string>
+    <string name="oragh_moshtaghe">اوراق مشتقه</string>
+    <string name="energy">کالا و انرژی</string>
+    <string name="ati">قرارداد آتی</string>
+    <string name="ekhtyar">قرارداد اختیار</string>
+    <string name="saham">سهام</string>
+    <string name="arz">ارز</string>
+    <string name="sandogh">صندوق</string>
+
 </resources>
