--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -48,6 +48,16 @@
     <string name="buy_signals">سیگنال های خریداری شده</string>
     <string name="sell_signals">سیگنال های صادر شده</string>
 
+
+    <string name="version">نسخه ی نرم افزار: %s</string>
+
+
+    <string name="editProfile">ویرایش مشخصات</string>
+    <string name="wallet">کیف پول</string>
+    <string name="about_us">درباره ی ما</string>
+    <string name="contact_us">تماس با ما</string>
+    <string name="invitation">دعوت از دوستان</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
