--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="sell_signals">سیگنال های صادر شده</string>
 
 
-    <string name="version">نسخه ی نرم افزار: %s</string>
+    <string name="version">نسخه ی نرم افزار: ۱</string>
 
 
     <string name="editProfile">ویرایش مشخصات</string>
@@ -61,6 +61,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="setting">تنظیمات</string>
 
 
 </resources>
