adding some new feature to setting fragment

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="wrong_code">کد وارد شده اشتباه می باشد.</string>
     <string name="rules_txt">را خوانده ام و موافق هستم.</string>
     <string name="no_connection">لطفا از اتصال به اینترنت مطمئن شوید.</string>
+
+
+
+
     <string name="home">خانه</string>
     <string name="tutorial">آموزش</string>
     <string name="search">سرچ نماد</string>
@@ -59,9 +63,16 @@
     <string name="invitation">دعوت از دوستان</string>
     <string name="exit">خروج از نرم افزار</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
     <string name="setting">تنظیمات</string>
+    <string name="subject">موضوع درخواست:</string>
+    <string name="description">شرح درخواست:</string>
+    <string name="submit">ثبت درخواست</string>
+    <string name="success">درخواست شما با موفقیت ثبت شد.</string>
+    <string name="error">در ثبت درخواست شما خطایی به وجود آمد.</string>
 
 
 </resources>
