addign stock search

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
 
     <string name="home">خانه</string>
     <string name="tutorial">آموزش</string>
-    <string name="search">سرچ نماد</string>
+    <string name="search">جست و جو نماد</string>
     <string name="news">اخبار</string>
     <string name="profile">پروفایل</string>
     <string name="search_hint">جست و جو</string>
