--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -108,9 +108,9 @@
     <string name="transaction_volume">حجم معاملات:</string>
     <string name="today">امروز</string>
     <string name="yesterday">دیروز</string>
-    <string name="ten_days_ago">۱۰ روز</string>
-    <string name="three_month_ago">۳ ماه</string>
-    <string name="one_month_ago">۱ ماه</string>
+    <string name="ten_days_ago">۱۰ روزه</string>
+    <string name="three_month_ago">۳ ماهه</string>
+    <string name="one_month_ago">۱ ماهه</string>
     <string name="number">تعداد</string>
     <string name="volume">حجم</string>
     <string name="buy">خرید</string>
@@ -119,6 +119,12 @@
     <string name="technical_information">اطلاعات تکنیکال</string>
     <string name="real_personality">حقیقی</string>
     <string name="legal_personality">حقوقی</string>
+
+
+
+    <string name="best_in_technical">بهترین های تکنیکال</string>
+    <string name="best_in_fundamental">بهترین های بنیادی</string>
+    <string name="see_more">مشاهده ی بیشتر</string>
 
 
 </resources>
