--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -151,5 +151,6 @@
     <string name="sell_tax">کارمزد فروش:</string>
     <string name="nima">نیما</string>
     <string name="exchange">صرافی ملی</string>
+    <string name="supervisor_message">پیام ناظر</string>
 
 </resources>
